# MOCK-project

./: .gitignore  BaseController.h.gcov  CMakeLists.txt  Makefile  ManagerController.cpp.gcov  README.md  a  aligned_buffer.h.gcov  alloc_traits.h.gcov  allocator.h.gcov  atomic.gcov  atomic_base.h.gcov  basic_string.h.gcov  basic_string.tcc.gcov  char_traits.h.gcov  functional_hash.h.gcov  hashtable.h.gcov  hashtable_policy.h.gcov  move.h.gcov  new.gcov  new_allocator.h.gcov  playlists.txt  ptr_traits.h.gcov  sss  std_mutex.h.gcov  std_thread.h.gcov  stl_function.h.gcov  stl_iterator_base_funcs.h.gcov  stl_iterator_base_types.h.gcov  tuple.gcov  type_traits.h.gcov  unordered_map.h.gcov  utility.gcov
coverage/: DefaultScreenController.cpp.gcov  DefaultScreenView.cpp.gcov  Exception.cpp.gcov  HardwareController.cpp.gcov  ManagerController.cpp.gcov  ManagerModel.cpp.gcov  ManagerView.cpp.gcov  MediaFile.cpp.gcov  MediaFileController.cpp.gcov  MediaFileView.cpp.gcov  MediaLibrary.cpp.gcov  MenuRenderer.cpp.gcov  Metadata.cpp.gcov  MetadataController.cpp.gcov  MetadataView.cpp.gcov  PlayingMediaController.cpp.gcov  PlayingMediaModel.cpp.gcov  PlayingView.cpp.gcov  Playlist.cpp.gcov  PlaylistController.cpp.gcov  PlaylistLibrary.cpp.gcov  PlaylistView.cpp.gcov  TerminalUtils.cpp.gcov  main.cpp.gcov
coverage-lcov/: coverage.info
coverage-lcov/html/: cmd_line  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage-lcov/html/include/common/: BaseController.h.func-c.html  BaseController.h.func-sort-c.html  BaseController.h.func.html  BaseController.h.gcov.html  BaseView.h.func-c.html  BaseView.h.func-sort-c.html  BaseView.h.func.html  BaseView.h.gcov.html  MockClass.h.func-c.html  MockClass.h.func-sort-c.html  MockClass.h.func.html  MockClass.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage-lcov/html/include/controller/: DefaultScreenController.h.func-c.html  DefaultScreenController.h.func-sort-c.html  DefaultScreenController.h.func.html  DefaultScreenController.h.gcov.html  ManagerController.h.func-c.html  ManagerController.h.func-sort-c.html  ManagerController.h.func.html  ManagerController.h.gcov.html  MediaFileController.h.func-c.html  MediaFileController.h.func-sort-c.html  MediaFileController.h.func.html  MediaFileController.h.gcov.html  MetadataController.h.func-c.html  MetadataController.h.func-sort-c.html  MetadataController.h.func.html  MetadataController.h.gcov.html  PlayingMediaController.h.func-sort-c.html  PlayingMediaController.h.func.html  PlayingMediaController.h.gcov.html  PlaylistController.h.func-c.html  PlaylistController.h.func-sort-c.html  PlaylistController.h.func.html  PlaylistController.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage-lcov/html/include/model/: ManagerModel.h.func-sort-c.html  ManagerModel.h.func.html  ManagerModel.h.gcov.html  Metadata.h.func-c.html  Metadata.h.func-sort-c.html  Metadata.h.func.html  Metadata.h.gcov.html  Playlist.h.func-sort-c.html  Playlist.h.func.html  Playlist.h.gcov.html  PlaylistLibrary.h.func-sort-c.html  PlaylistLibrary.h.func.html  PlaylistLibrary.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage-lcov/html/include/view/: ManagerView.h.func-c.html  ManagerView.h.func-sort-c.html  ManagerView.h.func.html  ManagerView.h.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage-lcov/html/src/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
coverage-lcov/html/src/common/: Exception.cpp.func-c.html  Exception.cpp.func-sort-c.html  Exception.cpp.func.html  Exception.cpp.gcov.html  MenuRenderer.cpp.func-c.html  MenuRenderer.cpp.func-sort-c.html  MenuRenderer.cpp.func.html  MenuRenderer.cpp.gcov.html  TerminalUtils.cpp.func-c.html  TerminalUtils.cpp.func-sort-c.html  TerminalUtils.cpp.func.html  TerminalUtils.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
coverage-lcov/html/src/controller/: DefaultScreenController.cpp.func-c.html  DefaultScreenController.cpp.func.html  (+26 more)
docs/: demo_8_1.plantuml
include/common/: BaseController.h  BaseView.h  Enum.h  Exception.h  FileUtils.h  MenuRenderer.h  Metadata.h  MockClass.h  Singleton.h  TagLibUtils.h  TagManager.h  TerminalUtils.h  exception.h
include/controller/: DefaultScreenController.h  ManagerController.h  MediaController.h  MediaFileController.h  MetadataController.h  MusicManager.h  PlayingMediaController.h  PlaylistController.h
include/hardware/: HardwareController.h
include/model/: ManagerModel.h  MediaFile.h  MediaLibrary.h  Metadata.h  PlayingMediaModel.h  Playlist.h  PlaylistLibrary.h  Song.h
include/view/: DefaultScreenView.h  ManagerView.h  MediaFileView.h  MediaView.h  MetadataView.h  MusicPlayerView.h  PlaybackView.h  PlayingView.h  PlaylistView.h  PrintMetadata.h
src/: main.cpp
src/common/: Exception.cpp  FileUtils.cpp  MenuRenderer.cpp  Metadata.cpp  TagLibUtils.cpp  TagManager.cpp  TerminalUtils.cpp
src/controller/: DefaultScreenController.cpp  ManagerController.cpp  MediaController.cpp  MediaFileController.cpp  MetadataController.cpp  MusicManager.cpp  PlayingMediaController.cpp  PlaylistController.cpp
src/hardware/: HardwareController.cpp
src/model/: ManagerModel.cpp  MediaFile.cpp  MediaLibrary.cpp  Metadata.cpp  PlayingMediaModel.cpp  Playlist.cpp  PlaylistLibrary.cpp  Song.cpp
src/view/: DefaultScreenView.cpp  ManagerView.cpp  MediaFileView.cpp  MediaView.cpp  MetadataView.cpp  MusicPlayerView.cpp  PlaybackView.cpp  PlayingView.cpp  PlaylistView.cpp  PrintMetadata.cpp
tesst/: tesst.txt
test/: _DefaultScreenControllerTest.cpp  _MetadataControllerTest.cpp  _PlayingMediaControllerTest.cpp  _PlaylistControllerTest.cpp  test_DefaultScreenController.cpp  test_ManagerController.cpp  test_MediaFile.cpp  test_MediaFileController.cpp  test_MetadataController.cpp  test_PlayingMediaController.cpp  test_Playlist.cpp  test_PlaylistController.cpp
(+68 files in other folders)
